加入BI功能